# aai-backend

./: .env.example  .gitignore  .pre-commit  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  alembic.ini  config.py  email_settings.py  generate_db_diagram.sh  generate_migrations.py  main.py  pyproject.toml  release-please-config.json  run_scheduler.py
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: build-and-deploy-dev.yml  build-dev.yml  build-ecr.yml  build-publish.yml  check-db-connection.yml  check-migrations.yml  deploy.yml  python-tests.yml  release-please.yml
auth/: __init__.py  config.py  management.py  ses.py  user_permissions.py  validator.py
auth0/: client.py  schemas.py  user_info.py
biocommons/: bundles.py  default.py  emails.py  groups.py
db/: admin.py  admin_config.py  core.py  models.py  setup.py  st_admin.py  types.py  utils.py
deploy/: README.md  app.py  requirements.txt
deploy/aai_backend_deploy/: aai_backend_deploy_stack.py
galaxy/: client.py  config.py  schemas.py
migrations/: env.py
migrations/versions/: 038392d88518_user_query_indexes.py  07161e26f537_group_membership.py  08a3d0593418_platform_constraints.py  0d2dd5140f8a_add_request_reason_to_memberships.py  101f45395233_add_group_membership.py  1546c07b9d78_user_email_verified.py  1c9f2d7b11a4_email_retry_window.py  27eaccb12f9b_user_db.py  2a0012a7fb99_enable_admin_revoke.py  30fd168b9c90_add_short_name_to_biocommons_group.py  4271e34a0adf_platform_role_name.py  44d8dc065b59_user_history.py  4594b458279c_platform_roles.py  4a316e432a93_group_management.py  575a146957f2_platform_model.py  59775ffa2413_user_history.py  59f19b4ffbf6_get_platform_email.py  6c9d1e8540be_add_soft_delete_columns.py  71f9107eff6c_user_history.py  7b0e3b7f4d84_email_notifications.py  7b90f7c351fa_convert_history_to_audit_logs.py  9c2ebbf62acd_merge_admin_revoke_heads.py  9f2d8c1b5d4e_add_email_change_otps.py  a8cb5fd2d258_generate_constraints.py  b44da7d412a6_group_management.py  c4c7a8e9b2d3_group_membership_rejection.py  c563e06b01b3_add_sender_email_in_emailnotification.py  c5ec222dd539_make_datetime_columns_timezone_aware.py  cb3235fee78d_email_scheduler_update.py  d64e9ebd0253_new_email_queue.py  (+5 more)
register/: tokens.py
routers/: admin.py  biocommons_admin.py  biocommons_groups.py  biocommons_register.py  bpa_orgs.py  bpa_register.py  errors.py  galaxy_register.py  sbp_register.py  user.py  utils.py
scheduled_tasks/: email_retry.py  scheduler.py  tasks.py
schemas/: __init__.py  auth0.py  biocommons.py  biocommons_register.py  bpa.py  galaxy.py  group.py  requests.py  responses.py  sbp.py  service.py  tokens.py  user.py
scripts/: bootstrap.py  generate_db_diagram.py  test_db_connection.py
services/: ckan_client.py  email_queue.py
tests/: conftest.py  datagen.py  test_admin.py  test_admin_user_filters.py  test_auth0_client.py  test_auth_management.py  test_auth_validator.py  test_biocommons_admin.py  test_biocommons_register.py  test_bpa_orgs.py  test_bpa_register.py  test_bpa_register_autoregister_list.py  test_ckan_client.py  test_cleanup_otps.py  test_config.py  test_galaxy.py  test_main.py  test_metrics.py  test_models.py  test_router_user_utils.py  test_sbp_register.py  test_ses.py  test_user.py  test_user_endpoints.py  test_user_schema.py  test_utils.py
(+23 files in other folders)
