[project]
name = "aai-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.8.1",
    "python-jose>=3.4.0",
    "sqlmodel>=0.0.24",
    "boto3>=1.34.0",
    "authlib>=1.6.1",
    "sqladmin>=0.21.0",
    "itsdangerous>=2.2.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
    "apscheduler[redis,sqlalchemy]~=3.11",
    "loguru>=0.7.3",
    "cachetools~=6.2",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-asyncio~=1.2",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.4",
    "polyfactory>=2.21.0",
    "pre-commit>=3.7.0",
    "freezegun>=1.5.2",
    "respx>=0.22.0",
    "mimesis~=18.0",
    "moto>=5.0.5"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=auth --cov=routers --cov=schemas --cov=db --cov=biocommons --cov-report=term --cov-report=xml"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["*"]
exclude = ["tests", "tests.*"]

[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = ["E", "F", "I"]
lint.ignore = ["E501"]
exclude = ["tests/data", ".venv", "venv", "migrations"]
